# finite-state-machine

./: .clang-format  .gitignore  CMakeLists.txt  c_cpp_properties.json  conanfile.py  settings.json
doc/: concept_dependencies.dot
src/: CMakeLists.txt
src/fsm/: detected.h  dispatcher.h  dispatcher_traits.h  event.h  finite_state_machine.h  overload.h  state.h  state_container.h  traits.h  transition.h  transition_table.h  transition_traits.h  type_sequence.h
src/main/cpp/: CMakeLists.txt
src/main/cpp/skizzay/fsm/: accepts.h  action_transition.h  ancestors.h  basic_state_container.h  boolean.h  concepts.h  const_ref.h  detected.h  enter.h  entry_context.h  entry_context_root.h  entry_coordinator.h  entry_state_scheduler.h  event.h  event_context.h  event_context_node.h  event_context_root.h  event_dispatcher.h  event_engine.h  event_handler.h  event_provider.h  event_transition_context.h  event_transition_context_root.h  event_triggered_context.h  events_list.h  exit.h  final_event_transition_context.h  finite_state_machine.h  flat_state_container.h  guarded_action_transition.h  guarded_transition.h  hierarchical_state_container.h  initial_entry_context.h  internal_event_engine.h  internal_event_executor.h  is_done.h  machine.h  machine_as_state_container.h  machine_state.h  node_transition_coordinator.h  (+29 more)
src/skizzay/: CMakeLists.txt
src/skizzay/fsm/: CMakeLists.txt  dispatcher.h  dispatcher_traits.h  event.h  finite_state_machine.h  state.h  state_container.h  traits.h  transition.h  transition_table.h  transition_traits.h
src/skizzay/utils/: CMakeLists.txt  detected.h  overload.h  type_sequence.h
src/test/cpp/: CMakeLists.txt
src/test/cpp/skizzay/fsm/: action_transition.t.cpp  ancestors.t.cpp  enter.t.cpp  event.t.cpp  event_context.t.cpp  event_context_root.t.cpp  event_dispatcher.t.cpp  event_engine.t.cpp  event_handler.t.cpp  event_provider.t.cpp  event_transition_context.t.cpp  exit.t.cpp  flat_state_container.t.cpp  guarded_action_transition.t.cpp  guarded_transition.t.cpp  hierarchical_state_container.t.cpp  machine_state.t.cpp  orthogonal_state_container.t.cpp  reenter.t.cpp  simple_transition.t.cpp  single_state_container.t.cpp  state.t.cpp  state_accessible.t.cpp  state_chart.t.cpp  state_container.t.cpp  state_provider.t.cpp  state_queryable.t.cpp  state_transition_context.t.cpp  test_objects.h  traits.t.cpp  transition.t.cpp  type_list.t.cpp
src/test/cpp/skizzay/fsm/integration/: full_fsm.t.cpp
test/: CMakeLists.txt
test/integration/: CMakeLists.txt  actionable_transitions.t.cpp  guarded_transitions.t.cpp  simple_transitions.t.cpp  traffic_light.t.cpp
test/unit/: CMakeLists.txt  dispatcher.t.cpp  state_container.t.cpp  traits.t.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
test_package/integration/: actionable_transitions.t.cpp  guarded_transitions.t.cpp  simple_transitions.t.cpp  traffic_light.t.cpp
test_package/unit/: dispatcher.t.cpp  state_container.t.cpp  traits.t.cpp
